# detour-island-graph

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: detour_island_graphConfig.cmake.in
include/detour_island_graph/: IslandGraph.h  IslandGraphBuilder.h  IslandGraphPathfinder.h  IslandGraphSerializer.h  Version.h
src/: IslandGraph.cpp  IslandGraphBoundaries.cpp  IslandGraphBuilder.cpp  IslandGraphBuilderInternal.h  IslandGraphDiscovery.cpp  IslandGraphDiscoveryInternal.h  IslandGraphPathfinder.cpp  IslandGraphPruning.cpp  IslandGraphScanner.cpp  IslandGraphSerializer.cpp  IslandGraphTopology.cpp  VectorMath.h
tests/: IslandGraphTests.cpp
